--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,12 @@
 .scoreboard {
   width: 58%;
   margin: 10rem auto;
-  background-color: #0b5402;
+  background-color: #3ba7ff;
   color: white;
   border-radius: 0.5rem;
   margin-top: 10rem;
   padding: 5rem;
-  border: 4px solid #aaaaaa;
+  border: 4px solid #0158bb;
 }
 
 .topRow {
@@ -30,15 +30,15 @@
   place-items: center;
   border: 3px solid white;
   border-radius: 0.5rem;
-  width: 15rem;
+  width: 20rem;
 }
 
 .home {
-  background-color: #656565;
+  background-color: #690028;
 }
 
 .away {
-  background-color: #af750a;
+  background-color: #cccccc;
 }
 
 .home__name,
@@ -50,6 +50,10 @@
   text-transform: uppercase;
   font-size: 3rem;
   padding: 2rem;
+}
+
+.away__name {
+  color: black;
 }
 
 .home__score,
